2004-11-06  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (__rt_queue_bind): Allow mapping DMA memory.

	* skins/rtai/registry.c (rt_registry_remove): Semantics changed:
	forcibly unregisters the object.
	(rt_registry_remove_safe): Performs safe removal atomically when
	the object is fully unlocked/idle.

2004-11-05  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Revert change to deletion calls mode; they
	should not switch to primary.

	* skins/rtai/queue.c (rt_queue_create): Return -ENOMEM upon error
	return from xnheap_init_shared().

	* skins/rtai/lib/queue.c (rt_queue_create): Make sure we don't
	leave a dandling queue in kernel space if the mapping fails.

2004-11-04  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.2

2004-11-04  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8c6 and
	2.6.8rc1-ppc-r6c9.

	* configure.in: Get rid of annnoying Kbuild warnings about undef'd
	symbols by moving vmlinux and Module.symvers out of the way (Idea
	brought by Jan Kiszka).

	* skins/rtai/registry.c (rt_registry_remove): Make sure we
	properly process XNBREAK.

	* skins/rtai/syscall.c: Make all deletion calls switch to primary
	mode before operating since rt_registry_remove() could wait.

	* skins/rtai: Provide exhaustive calling environment information.
	
	* skins/rtai/task.c: Add rt_task_remove_hook().

2004-11-01  Philippe Gerum  <rpm@xenomai.org>

	* configure.in, scripts/rtai-config.in: Fix CONFIG_RTAI_LINUXDIR
	mess.

	* nucleus/heap.c: Finalize shared heap support.

	* include/nucleus/queue.h (DECLARE_XNQUEUE): Add global queue
	declarator with built-in initializer.

2004-10-31  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c: Create the basic infrastructure for mapping
	heap memory to user-space processes.

	* include/nucleus/heap.h (xnheap_t): Add arch-dependent block.

2004-10-30  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/queue.c: Add message queue support.
